--- a/src/main/webapp/测试cart_Jquery_购物车.html
+++ b/src/main/webapp/测试cart_Jquery_购物车.html
@@ -81,6 +81,22 @@
 			.append($("<td>").append(td6))
     		.appendTo(_frame);
     	}
+    	//保留两位小数
+    	function formatMoney(num){
+			num = num.toString().replace(/\$|\,/g,'');  
+			if(isNaN(num))  
+			    num = "0";  
+			sign = (num == (num = Math.abs(num)));  
+			num = Math.floor(num*100+0.50000000001);  
+			cents = num%100;  
+			num = Math.floor(num/100).toString();  
+			if(cents<10)  
+			cents = "0" + cents;  
+			for (var i = 0; i < Math.floor((num.length-(1+i))/3); i++)  
+			num = num.substring(0,num.length-(4*i+3))+//+','+  
+			num.substring(num.length-(4*i+3));  
+			return (((sign)?'':'-') + num + '.' + cents);  
+		}
 
     	$(function(){
     		//初始化商品
@@ -121,6 +137,7 @@
 					}
 				});
 				//
+				totalPrice= formatMoney(totalPrice);
 				$(".cartSumNumber").text(totalCount);
 				$(".cartSumPrice").text('￥'+totalPrice);
 				$(".cartTitlePrice").text('￥'+totalPrice);
@@ -185,8 +202,10 @@
 				ele.val(count);
 				var price = $(".orderItemPromotePrice[pid="+pid+"]").text();
 				var eleMoney = $(".cartProductItemSmallSumPrice[pid="+pid+"]");
-				eleMoney.text('￥'+Math.floor(price*count*100)/100);
-				//console.log(price); 
+
+				var money = formatMoney(price*count);//Math.floor(price*count*100)/100
+				eleMoney.text('￥'+money); 
+				
 				syncTotalPriceAndCount();
 			});
 			//加法
@@ -202,7 +221,9 @@
 				ele.val(count);
 				var price = $(".orderItemPromotePrice[pid="+pid+"]").text();
 				var eleMoney = $(".cartProductItemSmallSumPrice[pid="+pid+"]");
-				eleMoney.text('￥'+Math.floor(price*count*100)/100);
+				var money = formatMoney(price*count);//Math.floor(price*count*100)/100
+				eleMoney.text('￥'+money);
+				
 				//console.log(pid,ele.val());
 				syncTotalPriceAndCount();
 			});
@@ -224,7 +245,8 @@
 
 				var price = $(".orderItemPromotePrice[pid="+pid+"]").text();
 				var eleMoney = $(".cartProductItemSmallSumPrice[pid="+pid+"]");
-				eleMoney.text('￥'+Math.floor(price*val*100)/100);
+				var money = formatMoney(price*val);//Math.floor(price*val*100)/100
+				eleMoney.text('￥'+money);
 				syncTotalPriceAndCount();
 			});
 
