--- a/src/main/webapp/plugin_datatables.html
+++ b/src/main/webapp/plugin_datatables.html
@@ -18,8 +18,9 @@
 	<!--  
         ####################JS插件区域####################
       -->
-    <!-- 主体JS框架 -->
-	<script src="Public/js/jquery.min.js-v=2.1.4"></script>
+    <!-- 主体JS框架 
+	<script src="Public/js/jquery.min.js-v=2.1.4"></script>-->
+    <script src="Public/js/jquery-2.1.1.js"></script>
 	<script src="Public/js/bootstrap.min.js-v=3.3.5"></script>
 
 	<!-- Data Tables 基于jQuery表格插件 -->
