--- a/src/main/webapp/BootStrap后台模板页面布局.html
+++ b/src/main/webapp/BootStrap后台模板页面布局.html
@@ -86,7 +86,23 @@
                                 <a class="J_menuItem" href="#" data-index="1">借款列表</a>
                             </li>
                         </ul>
-                </li>                
+                </li>   
+
+                <li>
+                    <a href="#">
+                        <i class="fa fa-home"></i>
+                        <span class="nav-label">借款管理</span>
+                        <span class="fa arrow"></span>
+                    </a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a class="J_menuItem" href="#" data-index="0">添加借款</a>
+                            </li>
+                            <li>
+                                <a class="J_menuItem" href="#" data-index="1">借款列表</a>
+                            </li>
+                        </ul>
+                </li>             
 		 	</ul>
 		 </div>
 	</nav>
